Update RaidedConfig.java